--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,6 @@ article{
 	background: url('../img/bg.jpg');
 	background-size: 100% 100%;
 }
-#card-board{
-    width: 267px;
-    height: 326px;
-    background: url("../img/cardboard.png");
-}
 section{
     position: relative;
     top: 16px;
@@ -27,18 +22,28 @@ section{
     margin: auto;
     background: url("../img/paper.png");
 }
+article:before{
+    content: '';
+    position: absolute;
+    left: 210px;
+    top: 106px;
+    width: 267px;
+    height: 326px;
+    background: url("../img/cardboard.png");
+}
 section header{
+    position: relative;
+    bottom: 15px;
     width: 236px;
-    height: 53px;
-    background: url("../img/torn-paper.png");
-
+    height: 64px;
+    background: url("../img/header-bg.png");
 }
 #add{
+    position: relative;
+    left: 214px;
+    top: 28px;
     width: 12px;
     height: 16px;
-    position: relative;
-    bottom: 58px;
-    left: 214px;
     border: none;
     background: transparent url("../img/add.png") no-repeat;
 }
@@ -46,9 +51,9 @@ section header{
     display: -webkit-box;
     -webkit-box-pack: center;
     font-family: 'HelveticaNeue';
-    /*-webkit-box-align: end;*/
+    -webkit-box-align: end;
     position: relative;
-    bottom: 106px;
+    bottom: 20px;
     left: 186px;
     width: 64px;
     height: 20px;
@@ -63,69 +68,64 @@ section header{
 .block::after, .block::before {
     content: '';
     position: absolute;
-    background: #6c6c6d;
     left: 27px;
     bottom: -4px;
-    width: 8px; height: 8px;
-    z-index: -1;
+    width: 8px;
+    height: 8px;
+    background: #6c6c6d;
     transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
+    z-index: -1;
 }
 .block::before {
     z-index: 1;
 }
-/*.block p{*/
-    /*text-align: center;*/
-    /*padding-top: 5px;*/
-    /*font-size: 10px;*/
-/*}*/
+
 #add:hover, .block:hover{
     opacity: 0.5;
 }
 
-/*ul li{*/
-    /*display: inline;*/
-    /*border-right: ;*/
-    /*width: 6px;*/
-    /*height: 100%;*/
-    /*padding-left: 60px;*/
-    /*background: url("../img/hinges.png") no-repeat;*/
-/*}*/
-
 h1{
 	display: -webkit-box;
-	-webkit-box-pack: center;
+    -webkit-box-pack: center;
 	-webkit-box-align: end;
+    position: relative;
+    top: 60px;
     font-family: 'HelveticaNeue';
     font-weight: bold;
     color: #545556;
-    position: relative;
-    bottom: 25px;
 }
 .tasks{
     position: relative;
-    bottom: 73px;
-    left: 16px;
+    top: 6px;
     float: left;
+    width: 235px;
+    height: 37px;
 }
 .tasks *{
     float: left;
 }
 .tasks .checkbox{
+    position: relative;
+    top: 10px;
+    left: 15px;
+    /*
     border-style:inset;
     border-width:5px;
     border-color: #f00;
-    border-radius: 3px;
+    border-radius: 0px;
+    -webkit-box-shadow: 0px 0px 3px 2px rgba(244,183,216,1);
+    box-sizing: ;*/
 }
 .tasks p{
     position: relative;
-    left: 24px;
-    bottom: 16px;
+    left: 40px;
+    bottom: 7px;
 }
 .tasks #remove{
     position: relative;
-    top: 3px;
-    left: 100px;
+    top: 12px;
+    left: 130px;
     width: 11px;
     height: 12px;
     border: none;
