--- a/css/style.css
+++ b/css/style.css
@@ -80,11 +80,9 @@ section header{
 .block::before {
     z-index: 1;
 }
-
 #add:hover, .block:hover{
     opacity: 0.5;
 }
-
 h1{
 	display: -webkit-box;
     -webkit-box-pack: center;
@@ -95,22 +93,6 @@ h1{
     font-weight: bold;
     color: #545556;
 }
-
-.tasks p{
-    position: relative;
-    left: 40px;
-    bottom: 7px;
-}
-.tasks #remove{
-    position: relative;
-    top: 12px;
-    left: 130px;
-    width: 11px;
-    height: 12px;
-    border: none;
-    background: transparent url("../img/trash.png") no-repeat;
-}
-
 ul *{
     float: left;
     list-style: none;
@@ -124,7 +106,7 @@ ul li{
     height: 37px;
     border-bottom: 1px solid #ededed;
 }
-ul .checkbox{
+ul input{
     position: relative;
     top: 9px;
     left: 15px;
@@ -134,7 +116,7 @@ ul span{
     top: 9px;
     left: 40px;
 }
-ul #remove{
+ul button{
     position: relative;
     top: 13px;
     left: 129px;
