--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ section{
 article:before{
     content: '';
     position: absolute;
-    left: 210px;
+    left: 211px;
     top: 106px;
     width: 267px;
     height: 326px;
@@ -107,9 +107,24 @@ ul li{
     border-bottom: 1px solid #ededed;
 }
 ul input{
+    -webkit-appearance: none;
     position: relative;
-    top: 9px;
-    left: 15px;
+    top: 7px;
+    left: 11px;
+    width: 19px;
+    height: 19px;
+    border: 3px solid #f0f0f0;
+    border-radius: 5px;
+    /*background: url("../img/un-check.png");*/
+}
+ul input:checked{
+    -webkit-appearance: none;
+    width: 19px;
+    height: 19px;
+    border: 3px solid #f4b7d9;
+    border-radius: 5px;
+    /*background: url("../img/check.png");*/
+    background: url("../img/check-mark.png") no-repeat;
 }
 ul span{
     position: relative;
