--- a/css/style.css
+++ b/css/style.css
@@ -4,125 +4,127 @@
 	font-weight: normal;
 	font-style: normal;
 }
-article{
-	display: -webkit-box;
-	-webkit-box-pack: center;
-	-webkit-box-align: center;
-	width: 673px;
-	height: 497px;
-	margin: 0 auto;
+body{
+	margin: 20% auto;
 	background: url('../img/bg.jpg');
 	background-size: 100% 100%;
 }
 section{
-    position: relative;
-    top: 16px;
+	position: relative;
+	top: 16px;
 	width: 236px;
 	height: 289px;
-    margin: auto;
-    background: url("../img/paper.png");
+	margin: auto;
+	background: url("../img/paper.png");
 }
-article:before{
-    content: '';
-    position: absolute;
-    left: 210px;
-    top: 106px;
-    width: 267px;
-    height: 326px;
-    background: url("../img/cardboard.png");
+#cover{
+	position: relative;
+	margin: 0 auto;
+	bottom: 291px;
+	width: 267px;
+	height: 326px;
+	background: url("../img/cardboard.png");
+	z-index: -1;
 }
 section header{
-    position: relative;
-    bottom: 15px;
-    width: 236px;
-    height: 64px;
-    background: url("../img/header-bg.png");
+	position: relative;
+	bottom: 15px;
+	width: 236px;
+	height: 64px;
+	background: url("../img/header-bg.png");
 }
 #add{
-    position: relative;
-    left: 214px;
-    top: 28px;
-    width: 12px;
-    height: 16px;
-    border: none;
-    background: transparent url("../img/add.png") no-repeat;
+	position: absolute;
+	left: 219px;
+	top: 67px;
+	width: 12px;
+	height: 16px;
+	border: none;
+	background: transparent url("../img/add.png") no-repeat;
 }
 .block {
-    display: -webkit-box;
-    -webkit-box-pack: center;
-    font-family: 'HelveticaNeue';
-    -webkit-box-align: end;
-    position: relative;
-    bottom: 20px;
-    left: 186px;
-    width: 64px;
-    height: 20px;
-    border: 1px solid #898a8c;
-    border-radius: 3px;
-    background: #6c6c6d;
-    font-size: 10px;
-    line-height: 20px;
-    color: #fff;
-    opacity: 0;
+	display: -webkit-box;
+	-webkit-box-pack: center;
+	font-family: 'HelveticaNeue';
+	-webkit-box-align: end;
+	position: relative;
+	bottom: 40px;
+	left: 186px;
+	width: 64px;
+	height: 20px;
+	border: 1px solid #898a8c;
+	border-radius: 3px;
+	background: #6c6c6d;
+	font-size: 10px;
+	line-height: 20px;
+	color: #fff;
+	opacity: 0;
 }
 .block::after, .block::before {
-    content: '';
-    position: absolute;
-    left: 27px;
-    bottom: -4px;
-    width: 8px;
-    height: 8px;
-    background: #6c6c6d;
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-    z-index: -1;
+	content: '';
+	position: absolute;
+	left: 27px;
+	bottom: -4px;
+	width: 8px;
+	height: 8px;
+	background: #6c6c6d;
+	transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+	z-index: -1;
 }
 .block::before {
-    z-index: 1;
+	z-index: 1;
 }
 #add:hover, .block:hover{
-    opacity: 0.5;
+	opacity: 0.5;
 }
 h1{
 	display: -webkit-box;
-    -webkit-box-pack: center;
+	-webkit-box-pack: center;
 	-webkit-box-align: end;
-    position: relative;
-    top: 60px;
-    font-family: 'HelveticaNeue';
-    font-weight: bold;
-    color: #545556;
+	position: relative;
+	top: 60px;
+	font-family: 'HelveticaNeue';
+	font-weight: bold;
+	color: #545556;
 	opacity: 1;
 }
+#forms{
+	width: 82%;
+	position: relative;
+	top: 20px;
+	left: 17px;
+	z-index: 3;
+}
 ul *{
-    float: left;
-    list-style: none;
+	float: left;
+	list-style: none;
 }
 ul li{
-    position: relative;
-    bottom: 11px;
-    right: 39px;
-    float: left;
-    width: 233px;
-    height: 37px;
-    border-bottom: 1px solid #ededed;
+	position: relative;
+	bottom: 11px;
+	right: 39px;
+	float: left;
+	width: 233px;
+	height: 37px;
+	border-bottom: 1px solid #ededed;
 }
 ul input{
-    position: relative;
-    top: 9px;
-    left: 15px;
+	position: relative;
+	top: 9px;
+	left: 15px;
 }
 ul span{
-    position: relative;
-    top: 9px;
-    left: 40px;
+	position: relative;
+	top: 9px;
+	left: 40px;
 }
 ul button{
-    position: relative;
-    top: 13px;
-    left: 129px;
-    width: 11px;
-    height: 12px;
-    border: none;
-    background: transparent url("../img/trash.png") no-repeat;
+	position: absolute;
+	top: 13px;
+	left: 211px;
+	width: 11px;
+	height: 12px;
+	border: none;
+	background: transparent url("../img/trash.png") no-repeat;
 }
