--- a/css/style.css
+++ b/css/style.css
@@ -93,8 +93,10 @@ h1{
 	width: 82%;
 	position: relative;
 	top: 20px;
-	left: 17px;
 	z-index: 3;
+}
+#forms button{
+	padding-left: 5px;
 }
 ul *{
 	float: left;
